--- a/static/index.html
+++ b/static/index.html
@@ -25,9 +25,9 @@
          <img src="logo.gif" alt="Logo">
       </div>
       <div id="content">
-         <h1>Search the Web and use the FIRST static proxy, we also dont log/sell your data, were profit free!</h1>
+         <h1>Mario Webz is a proxy who helps u search anything.</h1>
 
-         <form id="uv-form"">
+         <form id="uv-form">
             <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/> 
             <input id="uv-address" type="text" placeholder="Search Google or type an URL" class="form__input"/>
           </form>
@@ -46,7 +46,7 @@
       <script src="index.js" defer></script>
       <script src="error.js" defer></script>
       <div id="footer">
-         <p>&copy; 2023 TIW. All rights reserved.</p>
+         <p>&copy; 2023 JolsUnblockedGams. All rights reserved.</p>
       </div>
    </body>
 </html>
